--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,6 +5,7 @@
   list-style: none;
   scroll-behavior: smooth;
   text-decoration: none;
+  font-family: "Poppins", sans-serif;
 }
 
 /* Scrollbar------------- */
@@ -13,17 +14,16 @@
   width: 0.5rem;
 }
 ::-webkit-scrollbar-track {
-  background: var(--bg-color);
+  background: #fff;
 }
 ::-webkit-scrollbar-thumb {
-  background: var(--button-color);
+  background: #764a00;
   border-radius: 5rem;
 }
 
 body {
-  font-family: poppins;
-  height: 100%;
   padding-top: 70px;
+  overflow-x: hidden;
 }
 
 /* Navbar Section */
@@ -41,7 +41,7 @@ header {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 header.sticky {
-  background: var(--bg-color);
+  background: #fff;
   border-bottom: 1px solid #fff;
   padding: 12px 10%;
 }
@@ -54,7 +54,7 @@ header .navlist li {
 
 .navlist {
   display: flex;
-  color: #000;
+  color: #545454;
 }
 .navlist a {
   display: inline-block;
@@ -67,20 +67,17 @@ header .navlist li {
   animation-delay: calc(0.3s * var(--i));
   opacity: 0;
   position: relative;
-  font-family: Sofia Sans;
   font-size: 20px;
-
   line-height: 28.8px;
-
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
 }
 .navlist a:hover {
-  color: var(--button-color);
+  color: #000;
 }
 header .navlist a.active {
   font-weight: bold;
-  color: var(--button-color);
+  color: #764a00;
   position: relative;
 }
 
@@ -91,7 +88,7 @@ header .navlist a.active::after {
   bottom: 5px;
   height: 2px;
   width: 41%;
-  background-color: var(--button-color);
+  background-color: #764a00;
   transition: width 0.3s ease;
 }
 
@@ -105,7 +102,7 @@ header .navlist a:hover::after {
   margin-left: 25px;
   background: #fff;
   border-radius: 3px;
-  color: #000;
+  color: #764a00;
   display: none;
 }
 .navlist a.active {
@@ -114,29 +111,30 @@ header .navlist a:hover::after {
 }
 /* Border for Get Involved link */
 .nav-link.get-involved {
-  color: var(--button-color);
-  border: 2px solid var(--button-color);
-  padding: 5px 10px;
-  border-radius: 5px;
-  margin-right: 20px;
+  color: #764a00;
+  border: 2px solid #764a00;
+  padding: 5px 15px;
+  border-radius: 20px;
+  margin-right: 15px;
   transition: 0.7s ease;
 }
 .nav-link.get-involved:hover {
-  background-color: var(--button-color);
+  background-color: #764a00;
   color: white;
   border: none;
 }
 /* Background color for Contact Us link */
 .nav-link.contact-us {
-  background-color: var(--button-color);
-  color: var(--bg-color);
-  padding: 5px 10px;
-  border-radius: 5px;
+  background-color: #764a00;
+  color: #fff;
+  padding: 5px 15px;
+  border-radius: 20px;
+  transition: 0.7s ease;
 }
 .nav-link.contact-us:hover {
   background-color: transparent;
-  border: 2px solid var(--button-color);
-  color: var(--button-color);
+  border: 2px solid #764a00;
+  color: #764a00;
 }
 
 /* Responsiveness */
@@ -164,7 +162,7 @@ header .navlist a:hover::after {
     right: 0;
     left: 0;
     flex-direction: column;
-    background: var(--bg-color);
+    background: #fff;
     text-align: left;
     padding: 0 5%;
 
@@ -224,7 +222,7 @@ header .navlist a:hover::after {
     right: 0;
     left: 0;
     flex-direction: column;
-    background: var(--bg-color);
+    background: #fff;
     text-align: left;
     padding: 0 5%;
     transition: all 0.7s ease;
@@ -240,23 +238,96 @@ header .navlist a:hover::after {
 }
 /* End of Navbar Section */
 
-/* Hero Section */
+/* Home Section */
 .home-section {
   position: relative;
-  max-width: 100%;
   height: 100vh;
-  overflow: hidden;
-  margin-top: 69px;
+  background: url("/assets/images/home.avif") no-repeat center center/cover;
+  color: white;
+  margin-top: 38px;
 }
 
+/* Overlay */
+.home-section::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+}
 
+/* Content Styling */
+.container {
+  position: relative;
+}
 
+.welcome-text {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
 
+h1 {
+  font-size: 3rem;
+  font-weight: bold;
+}
 
+.text-orange {
+  color: #ffa300;
+}
 
+.text-green {
+  color: #71e70e;
+}
 
+.description {
+  font-size: 1.1rem;
+  margin-top: 10px;
+  max-width: 500px;
+}
 
+.book-btn {
+  display: inline-block;
+  margin-top: 20px;
+  padding: 10px 20px;
+  background: #764a00;
+  color: white;
+  text-decoration: none;
+  border-radius: 15px;
+  font-weight: bold;
+  transition: 0.4s ease;
+}
 
+.book-btn:hover {
+  background: #fff;
+  color: #764a00;
+}
+
+/* Mobile View */
+@media (max-width: 968px) {
+  .home-section {
+    text-align: left;
+  }
+
+  .container {
+    padding: 20px;
+  }
+
+  h1 {
+    font-size: 1.8rem;
+    
+  }
+
+  .description {
+    font-size: 1rem;
+  }
+
+  .book-btn {
+   
+    font-weight: normal;
+  }
+}
 
 /* Animations--------------------- */
 /* Navbar Animation Effect---- */
