--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -841,6 +841,80 @@ h1 {
 }
 
 
+/* Services Page------ */
+/* Service Home Section */
+.service-home {
+  position: relative;
+  background: url('/assets/images/service-page.avif') no-repeat center center/cover;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  margin-top: 38px;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.3);
+}
+
+.service-title {
+  position: relative;
+  color: #ffffff;
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+  .service-home{
+    margin-top: 15px;
+  }
+  .service-title {
+      font-size: 2rem;
+  }
+  .empower-title{
+    font-size: 1.2rem !important;
+  }
+}
+
+/* Empower Section----- */
+.empower-section {
+  position: relative;
+  background: linear-gradient(rgba(118, 74, 0, 0.3), rgba(5, 5, 5, 0.3)), 
+              url('/assets/images/about2.jpg') center/cover no-repeat;
+  height: 70vh; /* Adjust height as needed */
+  display: flex;
+}
+
+.empower-title {
+  color: #fff;
+  font-size: 2.5rem;
+  font-weight: bold;
+  text-align: left;
+}
+
+.empower-btn {
+  display: inline-block;
+  margin-top: 15px;
+  padding: 10px 25px;
+  border: 2px solid #fff;
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.empower-btn:hover {
+  background: rgba(255, 255, 255, 0.2);
+  color: #fff;
+}
+
 
 
 
