--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -915,6 +915,125 @@ h1 {
   color: #fff;
 }
 
+/* Blogs Page----- */
+.blog-section {
+  background-color: #f8f9fa;
+}
+/* Service Home Section */
+.blogs-home {
+  position: relative;
+  background: url('/assets/images/blog3.jpg') no-repeat center center/cover;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  margin-top: 38px;
+}
+.blogs-social-icons a {
+  color: #555;
+  font-size: 1.2rem;
+  transition: color 0.3s;
+}
+
+.blogs-social-icons a:hover {
+  color: #ffa300;
+}
+
+.intro-text {
+  font-size: 1.1rem;
+  color: #333;
+  line-height: 1.6;
+}
+.blog-section img{
+  width: 100%;
+}
+.blog-content h3 {
+  margin-top: 20px;
+  font-weight: bold;
+  color: #764a00;
+}
+
+.blog-content p {
+  font-size: 1rem;
+  color: #555;
+  line-height: 1.7;
+}
+
+/* stories section---------- */
+.stories-section {
+  background-color: #f8f9fa;
+}
+
+.story-item {
+  background: #fff;
+  border-radius: 8px;
+  padding: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.blogs-heading{
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+.stories-section img{
+  width: 100%;
+  height: 50%;
+}
+.story-meta {
+  background: #764a00;
+  color: #fff;
+  font-size: 0.9rem;
+  font-weight: bold;
+  border-radius: 5px;
+}
+
+.category {
+  background: rgba(255, 255, 255, 0.2);
+  padding: 5px 10px;
+  border-radius: 3px;
+}
+
+.minutes {
+  font-style: italic;
+}
+
+.story-title {
+  font-size: 1.5rem;
+  margin-top: 10px;
+  font-weight: bold;
+  color: #333;
+}
+
+.story-details {
+  font-size: 1rem;
+  color: #555;
+  line-height: 1.6;
+}
+
+.read-more {
+  font-size: 1rem;
+  color: #764a00;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.read-more:hover {
+  text-decoration: underline;
+}
+
+@media (max-width: 768px) {
+  .blogs-home{
+    margin-top: 15px;
+  }
+.blogs-heading{
+  font-size: 1.4rem;
+}
+.intro-text{
+  font-size: 1rem;
+  line-height: normal;
+}
+}
+
 
 
 
