--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -263,7 +263,7 @@ header .navlist a:hover::after {
   position: relative;
 }
 
-.welcome-text {
+.welcomes-text {
   font-size: 1.2rem;
   font-weight: bold;
 }
@@ -1228,7 +1228,7 @@ color: #767676;
   background: #fff;
   border-radius: 10px;
   overflow: hidden;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+ 
   justify-content: center;
   align-items: center;
   width:100%;
