--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -46,7 +46,7 @@ header.sticky {
   padding: 12px 10%;
 }
 header .logo img {
-  width: 100px;
+  width: 120px;
 }
 header .navlist li {
   position: relative;
@@ -1299,7 +1299,7 @@ color: #767676;
 /* Booking Page----------- */
 /* Center content */
 .booking-container {
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
