--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1767,7 +1767,7 @@ letter-spacing: 0.8px;
     width: 100%;
   }
   .dashboard-card img{
-    margin-left: 33%;
+    margin-left: 36%;
   }
   .card-texts{
     width: 106px;
@@ -2072,7 +2072,7 @@ margin-left: 280px;
 box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);  
 }
 .nutrition-card h4{
-  color: #04BC01;
+  color: #764a00;
 font-family: Inter;
 font-size: 20px;
 font-style: normal;
