--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1059,6 +1059,9 @@ h1 {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease-in-out;
 }
+.blog-stories h2{
+  color: #050505;
+}
 
 .story-item:hover {
   transform: translateY(-5px);
