--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -812,7 +812,7 @@ h1 {
 /* Social Icons */
 .social-icons a {
   color: white;
-  font-size: 18px;
+  font-size: 28px;
   margin-right: 10px;
   transition: color 0.3s;
 }
@@ -890,10 +890,13 @@ h1 {
     text-align: center;
     margin-top: 10px;
   }
+  .social-icons a{
+    font-size: 25px;
+  }
   .floating-btn{
-    width: 36px;
-    height: 36px;
-    font-size: 16px;
+    width: 40px;
+    height: 40px;
+    font-size: 19px;
   }
 }
 
